--- a/front-end/pokedexx/package.json
+++ b/front-end/pokedexx/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "guiaclientes",
+  "name": "pokedexx",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,9 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bulma": "^0.9.2",
     "core-js": "^3.6.5",
-    "lodash": "^4.17.21",
     "vue": "^2.6.11"
   },
   "devDependencies": {
